--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -18,6 +18,12 @@
   }
 }
 
+@media (max-width: 730px) {
+  .place__title {
+    align-self: flex-start;
+  }
+}
+
 @media (max-width: 850px) {
   .place__title {
     font-size: 42px;
